Results: finished the very last section, on sensitivity analysis

--- a/main.tex
+++ b/main.tex
@@ -120,6 +120,8 @@ The total output of observed tectal networks tended to be higher in response to 
 
 To quantify selectivity of individual tectal cells, we used Cohen’s $d$ effect size, in each cell, comparing amplitudes of responses to stimuli of different types (the difference in means, divided by the pooled standard deviation). We considered two measures of selectivity: that for "looming stimuli over flashes" (a type of selectivity that may rely on both stimulus dynamics and its spatial organization), and "looming over scrambled" (that can only rely on spatial organization of stimuli, as they had the same dynamics). On average, tectal cells were selective for looming stimuli (within-brain mean $d$ of 0.67$\pm$0.50 and 0.46$\pm$0.47 in younger and older tadpoles respectively), and there was no difference between stages ($p_t=$ 0.3). The share of cells that responded to looming stimuli stronger than to flashes also did not change in development (84$\pm$23\%, 77$\pm$21\%; $p_t=$ 0.4). There was however a developmental change in the distribution of cell selectivities within each brain: while the variance did not change ($p_t=$ 0.3), there was a change in skew ($p_t=$ 0.02), which was positive in younger animals, but negative in older ones, reflecting a decrease in number of top-selective cells within each brain (Fig. 2I). A more intuitive way to quantify this difference is by looking at the gap between top-selective (90th percentile) and median selective cells, which went down in older animals (0.75$\pm$0.26 in younger, but 0.53$\pm$0.27 in older tadpoles; $p_t=$ 0.03). Overall, these results were quite unexpected: in collision avoidance tests stage 49 tadpoles perform better than stage 46 tadpoles \citep{dong2009}, and we expected them to develop a subset of looming-selective cells, as described in adult frogs \citep{nakagawa2010otneurons,baranauskas2012}, and other vertebrates \citep{wang1992pigeon,wu2005pigeon,liu2011cat}. Yet in our experiments selectivity for looming stimuli did not change, and a subpopulation of strongly selective cells not only did not emerge in older animals, but became less prominent.
 
+%%% Two paragraphs below are commented about as I start to suspect that this analysis does not make much sense, and is not interpretable. If I keep believing in that, I'll just delete them eventually.
+
 %For the majority of preparations, tectal responses were reliably selective for looming stimuli within each experiment ($p_t<$0.05 in 11/14 and 9/16 experiments for stage 46 and 49 tadpoles respectively), the remaining 10 preparations did not have this preference. Interestingly, the majority of experiments with no preference happened in older, and thus presumably more developed animals.
 
 %The difference between full brain responses to looming and scrambled stimuli was even more diverse: some preparations did not have a preference between these stimuli ($p>$ 0.05; 9/14 and 7/16 for younger and older tadpoles respectively), some preferred looming stimuli to scrambled (1/14 and 4/16), while some preferred scrambled stimuli to looming (4/14 and 5/16). This individualized preference was most likely an artifact of our experimental approach, as “scrambled” stimuli were uniquely rearranged for each experiment, but were kept constant within each experimental session. It seems that this design produced less salient stimuli in some experiments, but more salient stimuli in others.
@@ -132,7 +134,7 @@ To assess the cell-to-cell variability of responses, we performed exploratory fa
 
 Knowing where our looming stimulus originated within the retinotopic map in the tectum, we could then check whether looming-selective cells were more likely to be found in the center of the expanding activation area (as it would be expected if collision detection was local and retinotopic \citep{frost2004review}, or if it was primarily based on feedback excitation \citep{jang2016}, or at the periphery (as predicted by the synfire model [XXX]). We found that selectivity for looming stimuli over flash tended to decrease with distance from the estimated projection center (Fig 3G) for both stage 45 (average $r=-$0.37$\pm$0.27; individual correlations $p_r<$0.05 in 12/14 experiments), and stage 49 tadpoles (average $r=-$0.09$\pm$0.35; $p_r<$0.05 in 12/16 experiments), indicating that looming-selective cells tended to be located in the center of the emerging spatial response. Similarly, at both developmental stages, selectivity decreased with response latency (stage 46: $p_r<$0.05 in 11/14 animals, average $r=-$0.29$\pm$0.11; stage 49: $p_r<$0.05 in 10/16 animals, average $r=-$0.16$\pm$0.21). Both correlations were weaker in older tadpoles (Fig 3H; $p_t=$ 0.02 for distance-selectivity, $p_t=$ 0.03 for latency-selectivity), indicating a more uniform distribution of looming-selective cells within the network.
 
-Finally, as a most holistic way to quantify overall tectal network selectivity, we looked at the total predictive power of tectal responses \citep{avitan2016limitations}. To do so, we ran a logistic regression on one half of data, linking responses of individual tectal cells in each trial to the type of stimulus used in this trial. Then we measured the quality of this linkage on the second half of recorded data. The quality of prediction was rather low: 59$\pm$12\% for younger, and 62$\pm$13\% for older tadpoles, with no change in development ($p_t$=0.6).
+Finally, as a most holistic way to quantify tectal network selectivity, we looked at the total power of tectal responses to predict stimulus identity \citep{avitan2016limitations}, known as "stimulus encoding" [XXX]. To do so, we ran a logistic regression on one half of data, linking amplitudes of tectal cells responses in each trial to the type of stimulus used in this trial. Then we measured the quality of this linkage on the second half of recorded data. The quality of prediction was rather low: 59$\pm$12\% for younger, and 62$\pm$13\% for older tadpoles, with no change in development ($p_t$=0.6).
 
 \subsection*{Variability and ensembles}
 
@@ -196,9 +198,9 @@ With these three rules at play, we exposed the model to patterned sensory stimul
 
 The summary of modeling results is shown in Fig. In development, the network became selective for looming stimuli, both in terms of the total response (by the end of development, responding to looming 99$\pm$9\% stronger than to flash) and mean selectivity (mean Cohen $d$ of responses = 1.09$\pm$0.10). The share of cells selective for looming stimuli also increased, and then saturated at $\sim$98\% level, as did the selectivity of the top 10\% of most selective cells.
 
-To see whether in our model the nature of visual stimuli could be reconstructed from network activation, we used a logistic regression on a vector of total cell responses, similar to how it was done for biological data. We then used a different dataset, consisting of equal shares of looming and non-looming stimuli, to assess the accuracy of our model. The prediction power increased in development, and plateaued at the accuracy level of $\sim$95\%. This suggests that a retinotopic STDP-driven network can achieve highly reliable looming detection if it is equipped with an output layer, potentially representing motor neurons in the hindbrain, and the weights of connections to this output element are also modified through reinforcement learning.
+To test whether in our model the nature of visual stimuli could be reconstructed from network activation (stimulus encoding), we used a logistic regression on a vector of total cell responses, as it was done for biological data. We then used a different dataset, consisting of equal shares of looming and non-looming stimuli, to assess the accuracy of our model. The prediction power increased in development, and plateaued at the accuracy level of $\sim$95\%. This suggests that a retinotopic STDP-driven network can achieve highly reliable looming detection if it is equipped with an output layer, potentially representing motor neurons in the hindbrain, and the weights of connections to the output layer are set correctly, e.g. via reinforcement learning.
 
-Unlike in biological experiments, the model was selective for looming stimuli over scrambled stimuli at the full network level, and by the end of the training period, responses to looming stimulus were 43$\pm$7\% stronger than to scrambled. Mean selectivity of individual cells, defined as a Cohen $d$ for responses to looming compared to scramble, was 0.48$\pm$0.07, and 84\% of cells were selective for looming stimuli, which is also different from what we observed in biological experiments. The selectivity for looming over flash correlated with selectivity for scrambled stimuli over flash on a cell by cell basis ($r$=0.17$\pm$0.10).
+Unlike in biological experiments, the model was selective for looming stimuli over scrambled stimuli at the full network level, and by the end of the training period, responses to looming stimulus were 43$\pm$7\% stronger than to scrambled. Mean selectivity of individual cells, defined as a Cohen $d$ for responses to looming compared to scramble, was 0.48$\pm$0.07, and 84\% of cells were selective for looming stimuli, which is also different from what we observed in biological experiments. The selectivity for looming over flash correlated with selectivity for scrambled stimuli over flash on a cell by cell basis ($r$= 0.17$\pm$0.10). A subset of highly selective cells did not emerge in the model, as the difference betwee 90th and 50th percentiles of selectivity were rather low ($\sim$ 0.9 ; Fig XXX).
 
 The positioning of selective cells within the network was different in model, compared to biological experiments. While in tadpoles, selective cells tended to be located in the middle of the retinotopic field, in the model they tended to be located on the periphery, and selectivity for looming stimuli positively correlated with the distance from the network center. Similar to tadpoles, however, this correlation disappeared in development (from $r\sim$ 0.75 in a naive network, to $r\sim$0.25 in a trained network). Despite the fact that the edges of looming stimuli generally traveled from the center of the retinotopic field to the periphery, there was no correlation between the weight of a cell-to-cell connection and its being facing outward from the network center ($r$=8e-5), which means that connections were equally likely to face outward and inward. Similarly to biological networks, selective cells tended to be closer to each other (29$\pm$3\% closer) than expected by chance, yet unlike what we observed in biological networks, this locality of connections was refined in developments.
 
@@ -223,9 +225,9 @@ To better assess whether the predictions of the model were confirmed in experime
 
 While a comparison with one faithfully constructed model is important, a better approach is to consider a family of models, and see which elements are critical for the replication of biological results, and which are not essential \citep{linderman2017constrain,pauli2018repro}. For example, in our model, how important was to assume that the plasticity happened in response to a learning signal during actual collisions? Would  looming selectivity develop if instead of unsuccessful looming avoidance we use general visual stimuli? Is structured sensory flow even necessary \citep{triplett2018emergence}? To answer these questions, we repeated our analysis several times, excluding different parts of the model one by one. We first let the model develop while exposed to randomized translational stimuli instead of looming stimuli. In a different set of computational experiments, exposed the model to random visual noise. Then we returned to looming stimuli, but either removed explicit synaptic competition, by replacing it with synapse weight decay; or greatly decreased the amount of intrinsic plasticity present in the system; or replaced STDP with simple symmetrical Hebbian plasticity. The results of these 5 sensitivity experiments are presented in Figure and Table 3, together with curves for the original "full" model.
 
-We found that training on looming stimuli was not critical for the model, but training on structured visual stimuli (as opposed to noise) was. When looming stimuli were replaced by randomized mixes of translational, looming, and receding stimuli, almost all network variables developed very similarly to how they developed in the main series of experiments. All measures of selectivity to looming stimuli, both looming compared to flash, and looming compared to scramble, also developed similarly, but reached 20-50\% lower selectivity values. In contrast, when patterned stimuli were replaced with uncorrelated noise, selectivity did not improve, and while the network still changed its degree distribution, efficiency, and modularity, it did not acquire hierarchical structure, and positioning of cells selective for looming stimili within the graph remained random.
+We found that training on looming stimuli was not critical for the model, but training on structured visual stimuli (as opposed to noise) was. When looming stimuli were replaced by randomized mixes of translational, looming, and receding stimuli, almost all network variables developed very similarly to how they developed in the main series of experiments. Measures of selectivity to looming stimuli, both compared to flash and to scramble, developed similarly, but reached 20-50\% lower selectivity values (Fig. X-X). In contrast, when patterned stimuli were replaced with uncorrelated noise, selectivity did not improve, and while the network still changed its efficiency, modularity, and degree distribution, it did not acquire hierarchical structure, and positioning of cells selective for looming stimuli within the graph remained random.
 
-For networks that was exposed to looming stimuli, but used incomplete sets of developmental rules... TODO
+Disruption of different developmental rules led to very different changes in network development (Table XX, Fig. XXX). When STDP was replaced by simple Hebbian plasticity, the selectivity for looming stimuli was as good or better than for STDP, and network measures were overall similar, except that modularity was higher (Fig X), and neuronal ensembles were more strongly interconnected (Fig X). This probably reflects the fact that unlike STDP, Hebbian plasticity did not discourage tight clusters of strongly interconnected neurons. When synaptic competition was replaced with synaptic strength decay, selectivity for looming stimuli was disrupted, the pattern of interactions between cell selectivity and cell centrality  became very different; the degree distribution became flatter rather than sharper, and network became strongly hierarchical. This difference can also be interpreted, as without synaptic compentition, chains of connected neurons may lead to "dead-ends" within the graph, while with competition the total output of each neuron would remain approximately constant, encouraging the development of cycles. The difference in network properties between the standard model and "no competition" model is consistent with the effect of long cycles. Finally, when instrinsic plasticity was weakened, the network did not aquire sensitivity for looming stimuli, and had simple response structure (both in terms of PCA results, and ensemble analysis; Fig X), but retained most of changes in network topology. This may suggest that intrinsic plasticity is critical for learning, as without this calibration the network was primarily driven by spontaneous activity that did not restructure it correctly.
 
 \section*{Discussion}
 
