--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,7 @@ Arseny S. Khakhalin\textsuperscript{1,*}
 * Correspondence: khakhalin@bard.edu
 
 \section*{Abstract}
-Visual looming is one of the most salient sensory stimuli a seeing animal may encounter, yet mechanisms of looming detection in vertebrates are still purely understood. For many animals, key computations for looming detection and collision avoidance seem to occur in distributed networks in the midbrain, making its hard to tease out the mechanics of these calculations. In this study, we contrast a computational developmental model of the optic tectum with analysis of directed connectivity graphs reconstructed from high-speed Ca imaging recording in Xenopus tadpoles. We report a difference in graph properties of tectal networks reconstructed from younger and older tadpoles, with degree distributions and network modularity changing in development. We also describe that in tadpoles, looming-selective cells tended to receive more inputs, and had higher Katz centrality than non-selective cells. We compare these observations to predictions of a firing rate model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and structured visual information. We show that our model network quickly developed robust looming selectivity, and replicated several changes in network properties, including increase in modularity and changes in degree distributions. Some other changes predicted by the model (hierarchy, efficiency, spatial distribution of selective cells) were however not observed in biological experiments. Finally, by comparing several alternative models, we show which developmental rules were most critical for the development of looming selectivity.
+Looming is one of the most salient visual stimuli an animal may encounter, yet mechanisms of looming detection in vertebrates are still poorly understood. For many animals, key computations involved in looming detection and collision avoidance seem to be performed by distributed networks, making it hard to tease out their underlying mechanisms. In this study, we contrast a computational developmental model of the optic tectum with the analysis of directed connectivity graphs, reconstructed from high-speed calcium imaging recording in Xenopus tadpoles. We report a difference in graph properties of tectal networks reconstructed from younger and older tadpoles, with degree distributions and network modularity changing in development. We also describe that in tadpoles, looming-selective cells tended to receive more inputs, and had higher Katz centrality than non-selective cells. We compare these results to predictions of a model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and driven by structured visual inputs. We show that under general conditions, our model network developed robust looming selectivity, and replicated some changes in network properties observed in imaging experiments, including increase in modularity and changes in degree distributions. Other changes predicted by the model (hierarchy, efficiency, and spatial distribution of selective cells) were however not replicated. Finally, by comparing several alternative models, we show which developmental rules are most critical for the development of looming selectivity.
 %TC:ignore 
 \bigskip
 
@@ -224,7 +224,7 @@ To better assess whether the predictions of the model were confirmed in experime
 \subsection*{Sensitivity analysis}
 
 While a comparison with one faithfully constructed model is important, a better approach is to consider a family of models, and see which elements are critical for the replication of biological results, and which are not essential \citep{linderman2017constrain,pauli2018repro}. For example, in our model, how important was to assume that the plasticity happened in response to a learning signal during actual collisions? Would  looming selectivity develop if instead of unsuccessful looming avoidance we use general visual stimuli? Is structured sensory flow even necessary \citep{triplett2018emergence}? To answer these questions, we repeated our analysis several times, excluding different parts of the model one by one. We first let the model develop while exposed to randomized translational stimuli instead of looming stimuli. In a different set of computational experiments, exposed the model to random visual noise. Then we returned to looming stimuli, but either removed explicit synaptic competition, by replacing it with synapse weight decay; or greatly decreased the amount of intrinsic plasticity present in the system; or replaced STDP with simple symmetrical Hebbian plasticity. The results of these 5 sensitivity experiments are presented in Figure and Table 3, together with curves for the original "full" model.
-
+https://www.overleaf.com/project/5bba84a33dd0cc0306080f39
 We found that training on looming stimuli was not critical for the model, but training on structured visual stimuli (as opposed to noise) was. When looming stimuli were replaced by randomized mixes of translational, looming, and receding stimuli, almost all network variables developed very similarly to how they developed in the main series of experiments. Measures of selectivity to looming stimuli, both compared to flash and to scramble, developed similarly, but reached 20-50\% lower selectivity values (Fig. X-X). In contrast, when patterned stimuli were replaced with uncorrelated noise, selectivity did not improve, and while the network still changed its efficiency, modularity, and degree distribution, it did not acquire hierarchical structure, and positioning of cells selective for looming stimuli within the graph remained random.
 
 Disruption of different developmental rules led to very different changes in network development (Table XX, Fig. XXX). When STDP was replaced by simple Hebbian plasticity, the selectivity for looming stimuli was as good or better than for STDP, and network measures were overall similar, except that modularity was higher (Fig X), and neuronal ensembles were more strongly interconnected (Fig X). This probably reflects the fact that unlike STDP, Hebbian plasticity did not discourage tight clusters of strongly interconnected neurons. When synaptic competition was replaced with synaptic strength decay, selectivity for looming stimuli was disrupted, the pattern of interactions between cell selectivity and cell centrality  became very different; the degree distribution became flatter rather than sharper, and network became strongly hierarchical. This difference can also be interpreted, as without synaptic compentition, chains of connected neurons may lead to "dead-ends" within the graph, while with competition the total output of each neuron would remain approximately constant, encouraging the development of cycles. The difference in network properties between the standard model and "no competition" model is consistent with the effect of long cycles. Finally, when instrinsic plasticity was weakened, the network did not aquire sensitivity for looming stimuli, and had simple response structure (both in terms of PCA results, and ensemble analysis; Fig X), but retained most of changes in network topology. This may suggest that intrinsic plasticity is critical for learning, as without this calibration the network was primarily driven by spontaneous activity that did not restructure it correctly.
