Methods (reciprocity), typos everywhere, some results, wording in discussion

--- a/table1.tex
+++ b/table1.tex
@@ -32,7 +32,7 @@ PCA complexity & = & \land & \land & \land \lor & \land & \land & \land\\
 N Ensembles, change & \times & \times & \times & \times & \times & \times & \times \\
 Ensembles spatially local & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark\\
 Ensembles overconnected & \checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark & \checkmark\\
-\% reciprocal edges, change & \lor & TODO & TODO & TODO & TODO & TODO & TODO\\
+\% reciprocal edges, change & \lor & \lor & \lor \land & \lor & \lor & \lor & \lor \\
 \hline
 \multicolumn{8}{l}{\textbf{Connections between cells:}}\\
 Spatially close & \checkmark & \checkmark & \times & \times & \checkmark & \checkmark & \times \\
