--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,35 @@
+@article{aswolinskiy2015stdpreward,
+  title={RM-SORN: a reward-modulated self-organizing recurrent neural network},
+  author={Aswolinskiy, Witali and Pipa, Gordon},
+  journal={Frontiers in computational neuroscience},
+  volume={9},
+  pages={36},
+  year={2015},
+  publisher={Frontiers}
+}
+
+@article{banino2018grid,
+  title={Vector-based navigation using grid-like representations in artificial agents},
+  author={Banino, Andrea and Barry, Caswell and Uria, Benigno and Blundell, Charles and Lillicrap, Timothy and Mirowski, Piotr and Pritzel, Alexander and Chadwick, Martin J and Degris, Thomas and Modayil, Joseph and others},
+  journal={Nature},
+  volume={557},
+  number={7705},
+  pages={429},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
+@article{bollmann2009,
+  title={Subcellular topography of visually driven dendritic activity in the vertebrate visual system},
+  author={Bollmann, Johann H and Engert, Florian},
+  journal={Neuron},
+  volume={61},
+  number={6},
+  pages={895--905},
+  year={2009},
+  publisher={Elsevier}
+}
+
 @article{ciarleglio2015,
   title={Multivariate analysis of electrophysiological diversity of Xenopus visual neurons during development and plasticity},
   author={Ciarleglio, Christopher M and Khakhalin, Arseny S and Wang, Angelia F and Constantino, Alexander C and Yip, Sarah P and Aizenman, Carlos D},
@@ -38,6 +70,17 @@
   publisher={eLife Sciences Publications, Ltd}
 }
 
+@article{fiete2010chains,
+  title={Spike-time-dependent plasticity and heterosynaptic competition organize networks to produce long scale-free sequences of neural activity},
+  author={Fiete, Ila R and Senn, Walter and Wang, Claude ZH and Hahnloser, Richard HR},
+  journal={Neuron},
+  volume={65},
+  number={4},
+  pages={563--576},
+  year={2010},
+  publisher={Elsevier}
+}
+
 @article{jang2016,
   title={Emergence of Selectivity to Looming Stimuli in a Spiking Network Model of the Optic Tectum},
   author={Jang, Eric V and Ramirez-Vizcarrondo, Carolina and Aizenman, Carlos D and Khakhalin, Arseny S},
@@ -57,6 +100,26 @@
   pages={2948--2962},
   year={2014},
   publisher={Wiley Online Library}
+}
+
+@article{litwin2014assemblies,
+  title={Formation and maintenance of neuronal assemblies through synaptic plasticity},
+  author={Litwin-Kumar, Ashok and Doiron, Brent},
+  journal={Nature communications},
+  volume={5},
+  pages={5319},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
+@article{papo2016beware,
+  title={Beware of the small-world neuroscientist!},
+  author={Papo, David and Zanin, Massimiliano and Mart{\'\i}nez, Johann H and Buld{\'u}, Javier M},
+  journal={Frontiers in human neuroscience},
+  volume={10},
+  pages={96},
+  year={2016},
+  publisher={Frontiers}
 }
 
 @article{pereira2016,
@@ -79,17 +142,6 @@
   publisher={Frontiers}
 }
 
-@article{bollmann2009,
-  title={Subcellular topography of visually driven dendritic activity in the vertebrate visual system},
-  author={Bollmann, Johann H and Engert, Florian},
-  journal={Neuron},
-  volume={61},
-  number={6},
-  pages={895--905},
-  year={2009},
-  publisher={Elsevier}
-}
-
 @article{sporns2005,
   title={The human connectome: a structural description of the human brain},
   author={Sporns, Olaf and Tononi, Giulio and K{\"o}tter, Rolf},
@@ -99,6 +151,17 @@
   pages={e42},
   year={2005},
   publisher={Public Library of Science}
+}
+
+@article{thompson2016ensembles,
+  title={Functional profiles of visual-, auditory-, and water flow-responsive neurons in the zebrafish tectum},
+  author={Thompson, Andrew W and Vanwalleghem, Gilles C and Heap, Lucy A and Scott, Ethan K},
+  journal={Current Biology},
+  volume={26},
+  number={6},
+  pages={743--754},
+  year={2016},
+  publisher={Elsevier}
 }
 
 @article{rubinov2011,
@@ -1144,12 +1207,12 @@
   publisher={Frontiers}
 }
 
-@article{aswolinskiy2015stdpreward,
-  title={RM-SORN: a reward-modulated self-organizing recurrent neural network},
-  author={Aswolinskiy, Witali and Pipa, Gordon},
-  journal={Frontiers in computational neuroscience},
-  volume={9},
-  pages={36},
-  year={2015},
-  publisher={Frontiers}
+@article{zenke2017temporal,
+  title={The temporal paradox of Hebbian learning and homeostatic plasticity},
+  author={Zenke, Friedemann and Gerstner, Wulfram and Ganguli, Surya},
+  journal={Current opinion in neurobiology},
+  volume={43},
+  pages={166--176},
+  year={2017},
+  publisher={Elsevier}
 }
