--- a/table1.tex
+++ b/table1.tex
@@ -11,19 +11,19 @@
  \text{-STDP} & \begin{tabular}{l}-Syn.\\Comp.\end{tabular} & \text{-Intrinsic} & \text{Visual} & \text{Noise} \\
 \hline
 Brain FL selectivity & \checkmark & \checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark \\
-Brain FL selectivity, change & =	& \land	\lor	& 	\land \lor	& \land & = & \land & =\\
+Brain selectivity, change & =	& \land	\lor	& 	\land \lor	& \land & = & \land & =\\
 Av. FL selectivity $d$ & 0.6 & 0.8 & 1.0 & 0.6 & -7.0 & 0.8 & 0.5 \\
 Av. FL selectivity, change & = & \land & \land \lor & \land & \lor \land & \land & = \\
 \% FL select. cells & 80\% & 98\% & 95\% & 75\% & 0\% & 95\% & 95\%\\
 \% FL select. cells, change & = & \land & \land & \land \lor & = & \land & \land\\
-FL 90-50 \%tile, change & \lor & \land & \land \lor & \land & \land \lor & \land & =\\
+FL skew, change & \lor & \land & \land \lor & \land & \land \lor & \land & =\\
 \hline
 Brain SL selectivity & \times & \checkmark & \checkmark & \checkmark & \times & \checkmark & \times  \\
 Av. SL selectivity $d$ & -0.05 & 0.5 & 0.7 & 0.5 & -0.5 & 0.2 & 0\\
 Av. SL selectivity, change & = & \land & \land \lor & \land & \lor & \land & = \\
 \% SL select. cells & 50\% & 80\% & 90\% & 70\% & 20\% & 70\% & 50\% \\
 \% SL select. cells, change & = & \land & \land & \land & \lor & \land & \lor \\
-SL 90-50 \%tile change & = & \land & \land \lor & \land & - & \land \lor & -\\
+SL skew, change & = & \land & \land \lor & \land & - & \land \lor & -\\
 corr(FS,FL) & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \times & \checkmark \\
 corr(SL,FL) & \times & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark\\
 Stim. decoding, change & = & \land & \land & \land & \lor & \land & \land \lor \\
@@ -32,12 +32,12 @@ PCA complexity & = & \land & \land & \land \lor & \land & \land & \land\\
 N Ensembles, change & \times & \times & \times & \times & \times & \times & \times \\
 Ensembles spatially local & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark\\
 Ensembles overconnected & \checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark & \checkmark\\
-\% reciprocal edges, change & \lor & \lor & \lor \land & \lor & \lor & \lor & \lor \\
+\% two-way edges, change & \lor & \lor & \lor \land & \lor & \lor & \lor & \lor \\
 \hline
 \multicolumn{8}{l}{\textbf{Connections between cells:}}\\
 Spatially close & \checkmark & \checkmark & \times & \times & \checkmark & \checkmark & \times \\
 Become closer & \times & \times & \times & \times & \times & \times & \times \\
-Point in or out: & = & = & = & \text{out} & = & = & =\\
+Point to periphery: & = & = & = & \checkmark & = & = & =\\
 Increase selectivity & \times & \times & \times & \checkmark & \times & \times & \times \\
 \hline
 \multicolumn{8}{l}{\textbf{Network properties:}}\\
